<resources>
    <string name="app_name">Far On Droid</string>
    <string name="btn_alt">Alt</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_new">New</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>
    <string name="btn_replace">Replace</string>
    <string name="btn_settings">Settings (F11)</string>
    <string name="btn_encoding">Encoding</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="folder">Folder</string>
    <string name="virtual_folder">Virtual Folder</string>
    <string name="archive">Archive</string>
    <string name="folder_root">Root</string>
    <string name="folder_up">Up</string>
    <string name="dialog_actions">Actions</string>
    <string name="canceled">Canceled by user</string>
    <string name="new_file">File</string>
    <string name="new_folder">Directory</string>
    <string name="last_modified">Last Modified</string>
    <string name="permissions">Permissions</string>
    <string name="size">File Size</string>
    <string name="error">Error</string>
    <string name="error_enter_name">Enter new name</string>
    <string name="error_unknown_unexpected_error">An unknown error has occurred. Previous action is canceled.</string>
    <string name="error_cannot_create_file">Can\'t create file or folder \n\n %s</string>
    <string name="error_cannot_delete_files">Can\'t delete selected file (s)</string>
    <string name="error_cannot_rename_files">Can\'t rename selected file</string>
    <string name="error_cannot_move_files">Can\'t move selected file (s)</string>
    <string name="error_cannot_copy_files">Can\'t copy selected file (s) to %s</string>
    <string name="error_cannot_copy_files_to_the_same_folder">Can\'t copy selected file (s) to the same directory</string>
    <string name="error_cannot_open_file">Can\'t open file</string>
    <string name="error_open_archive">Error while opening archive.</string>
    <string name="error_no_app_to_open_file">No application can be found to open this file</string>
    <string name="error_file_is_too_big">File is too big. Only \'View\' mode is available</string>
    <string name="error_output_directory_doesnt_exists">Output directory doesn\'t exist or can\'t be created</string>
    <string name="error_file_already_exists">File already exists</string>
    <string name="error_create_archive_files_tree">Can\'t create archive files tree. Archive seems to be broken.</string>
    <string name="error_extract_archive_files">Can\'t extract archive files.</string>
    <string name="error_virtual_directories_not_permitted">Operations with virtual directories not permitted.</string>
    <string name="error_create_bookmark">Can\'t create bookmark. Probably, bookmark with this label already exists.</string>
    <string name="error_enter_label">Enter bookmark label</string>
    <string name="error_archive_operation_not_supported">This operation is not supported with archives</string>
    <string name="error_network_operation_not_supported">Currently this operation is not supported with networks clouds.</string>
    <string name="error_no_selected_file">No selected file. You must select file first.</string>
    <string name="error_ar_archive_too_long_name">Too long name for ar archive. Max file name length is 16 (including file extension).</string>
    <string name="error_enter_archive_name">Enter archive name</string>
    <string name="error_create_archive">Error while creating archive file</string>
    <string name="error_quick_view_operation_not_supported">Operations \'Copy\'/\'Move\'/\'Create archive\' not supported with Quick View.</string>
    <string name="error_open_file">Error while opening file</string>
    <string name="error_quick_view_error_while_calculating_detailes">Error while calculating folder details: %s</string>
    <string name="error_quick_view_null_file">Can\'t read directory</string>
    <string name="error_account_unlinked">Network account is unlinked. Most likely this happens because your authentication tokens were expired. Panel will be closed. Delete this account?</string>
    <string name="error_io_error">Network IO error. Please, try again.</string>
    <string name="error_canceled">Operation canceled. Please, try again.</string>
    <string name="error_common">Unrecognized network error. Please, try again.</string>
    <string name="error_network_quota">Dropbox was unable to complete this action because of a storage quota limit.</string>
    <string name="error_getting_account_info">Unrecognized error occurred while receiving account info.</string>
    <string name="error_account_expired">Provided authorization grant is invalid, expired or revoked.</string>
    <string name="error_search_not_supported">Search is not supported for %s.</string>
    <string name="error_diff_not_supported">Diff is supported for local file systems only.</string>
    <string name="error_ftp_connection_closed">FTP connection is closed. Please, try again.</string>
    <string name="error_socket_timeout_exception">Network request timeout. Try again?</string>
    <string name="error_inactive_panel_is_busy">Inactive panel is busy.</string>
    <string name="error_cant_open_intent">This application can\'t be opened.</string>
    <string name="error_export_as">Error while exporting file.</string>
    <string name="action_info">Info</string>
    <string name="action_send">Send</string>
    <string name="action_share_to">Share file to</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit">Edit</string>
    <string name="quick_view">Quick View</string>
    <string name="quick_view_contains">Contains:</string>
    <string name="quick_view_folders">Folders</string>
    <string name="quick_view_files">Files</string>
    <string name="quick_view_size">Files size</string>
    <string name="file_system">File system</string>
    <string name="sdcard_root">Make Storage as root</string>
    <string name="sdcard_root_summary">Make Storage as parent folder of file system</string>
    <string name="hide_system_files">Hide system files</string>
    <string name="hide_system_files_summary">Hide system files in files list</string>
    <string name="file_system_sort">Sort files by</string>
    <string name="file_system_sort_summary">Specify files order rule</string>
    <string name="file_system_file_info">File Info</string>
    <string name="file_system_file_info_summary">Info to the right of file on main panel</string>
    <string name="folders_first">Show folders first</string>
    <string name="folders_first_summary">Push folders to the top of file list in current level</string>
    <string name="user_interface">User interface</string>
    <string name="settings_feedback">Feedback</string>
    <string name="send_email">Send email</string>
    <string name="send_email_summary">Send email directly to developer with your suggestions</string>
    <string name="rate_app">Rate application</string>
    <string name="rate_app_summary">Rate application and leave your comment on Google Play</string>
    <string name="multi_panels">Multi Panels</string>
    <string name="multi_panels_summary">Two panels interface</string>
    <string name="flexible_panels">Flexible Panels</string>
    <string name="flexible_panels_summary">Allow to expand/constrict panels.</string>
    <string name="home_folder">Home folder</string>
    <string name="enable_home_folder">Enable Home folder</string>
    <string name="enable_home_folder_summary">Enable to use Home folder option</string>
    <string name="main_panel_font_size">Main panel font size</string>
    <string name="toolbar_font_size">Toolbar item font size</string>
    <string name="viewer_font_size">Viewer font size</string>
    <string name="tips">Show tips again</string>
    <string name="main_panel_font">Main panel font</string>
    <string name="viewer_font">Viewer font</string>
    <string name="main_panel_color">Main panel color</string>
    <string name="main_panel_color_summary">Configure color of main file system panel</string>
    <string name="secondary_color">Secondary color</string>
    <string name="secondary_color_summary">Configure secondary color : bottom panel, current path, etc</string>
    <string name="viewer_color">Viewer color</string>
    <string name="viewer_color_summary">Configure viewer color</string>
    <string name="style">Style</string>
    <string name="style_summary">Configure your app looks like</string>
    <string name="text_color">Text color</string>
    <string name="text_color_summary">Configure text color for viewer and main panel</string>
    <string name="selected_color">Selected file color</string>
    <string name="selected_color_summary">Configure selected file color for main panel</string>
    <string name="hidden_color">Hidden file color</string>
    <string name="hidden_color_summary">Configure hidden file color for main panel</string>
    <string name="install_color">Install (apk) file color</string>
    <string name="install_color_summary">Configure apk file color for main panel</string>
    <string name="archive_color">Archive file color</string>
    <string name="archive_color_summary">Configure archive file color for main panel</string>
    <string name="folder_color">Folder color</string>
    <string name="folder_color_summary">Configure folder color for main panel</string>
    <string name="reset_to_defaults">Reset to defaults</string>
    <string name="show_selected_files_size">Show selected files size</string>
    <string name="show_selected_files_size_summary">Dynamically calculate selected files size and show on main pannel bottom</string>
    <string name="force_use_en_locale">Force use english language</string>
    <string name="tips_first_page">
Far On Droid is free file manager providing intuitive and simple file management using two panel interface.\n\n
Manage and view all your files: music, documents, pictures, videos or any other files regardless of their location: local file system, archive or network (such as FTP server or Dropbox).\n\n
Add your favorite and most commonly used directories to <b>bookmarks</b> list (by clicking on start icon at the top of each panel) for quick and easy access.\n\n
Search files by name or text appearance within file using built in search mechanism.\n\n
Application is dedicated to everyone who feels nostalgic by old school file managers like <b>FAR Manager</b> or <b>Midnight Commander</b>.
    </string>
    <string name="tips_settings_page">
Flexible and easy configurable system for all your needs.\n\n
Go through <b>Settings</b> options to configure your application: single or multi panel mode, flexible or static panels,
variable font size (for panel items and viewer lines) and toolbar items size, different files sorting and information about files.\n\n
Activate <b>root access</b> (on \'rooted\' device) to get full control of your device.
    </string>
    <string name="tips_archive_page">
Entrust the work with your archives to <b>Far On Droid</b> and it doesn\'t let you down.\n\n
Easily extract/view existed archives or create new with <b>Far On Droid</b>.\n\n
Support for ZIP, encrypted ZIP, TAR, JAR, CPIO, GZIP and BZIP2.\n\n
    </string>
    <string name="tips_cloud_page">
Connect your device with \'clouds\'!\n\n
With <b>Far On Droid</b> you can access your resources from different kind of network storage, like Dropbox or SkyDrive.\n\n
More network stuff will appear in future versions.
    </string>
    <string name="use_root">Use root access</string>
    <string name="use_root_summary">Device need to be rooted and super user need to be installed</string>
</resources>