<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:persistent="true">
    <PreferenceCategory
            android:title="@string/file_system"
            android:key="pref_key_file_system">

        <CheckBoxPreference
                android:key="sdcard_root"
                android:title="@string/sdcard_root"
                android:summary="@string/sdcard_root_summary"
                android:widgetLayout="@layout/check_box_preference"
                android:defaultValue="false"/>

        <CheckBoxPreference
                android:key="hide_system_files"
                android:title="@string/hide_system_files"
                android:summary="@string/hide_system_files_summary"
                android:widgetLayout="@layout/check_box_preference"
                android:defaultValue="false"/>

        <Preference
                android:key="file_system_sort"
                android:title="@string/file_system_sort"
                android:summary="@string/file_system_sort_summary"
            />

        <CheckBoxPreference
                android:key="folders_first"
                android:title="@string/folders_first"
                android:summary="@string/folders_first_summary"
                android:widgetLayout="@layout/check_box_preference"
                android:defaultValue="true"/>

        <CheckBoxPreference
                android:key="enable_home_folder"
                android:title="@string/enable_home_folder"
                android:summary="@string/enable_home_folder_summary"
                android:widgetLayout="@layout/check_box_preference"
                android:defaultValue="false"/>

        <Preference
                android:key="home_folder"
                android:title="@string/home_folder"/>

        <!--
                <ListPreference
                        android:key="file_system_sort"
                        android:title="@string/file_system_sort"
                        android:dialogTitle="@string/file_system_sort"
                        android:entries="@array/files_sort_array"
                        android:entryValues="@array/files_sort_array_values"
                        android:defaultValue="0" />
        -->
        <CheckBoxPreference
            android:key="root_enabled"
            android:title="@string/use_root"
            android:summary="@string/use_root_summary"
            android:widgetLayout="@layout/check_box_preference"
            android:defaultValue="false"/>

        <CheckBoxPreference
                android:key="show_selected_files_size"
                android:title="@string/show_selected_files_size"
                android:summary="@string/show_selected_files_size_summary"
                android:widgetLayout="@layout/check_box_preference"
                android:defaultValue="true"/>

    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/user_interface"
            android:key="pref_user_interface">

        <CheckBoxPreference
                android:key="multi_panels"
                android:title="@string/multi_panels"
                android:summary="@string/multi_panels_summary"
                android:widgetLayout="@layout/check_box_preference"/>

        <CheckBoxPreference
                android:key="flexible_panels"
                android:title="@string/flexible_panels"
                android:summary="@string/flexible_panels_summary"
                android:widgetLayout="@layout/check_box_preference"/>

        <Preference
                android:key="file_system_file_info"
                android:title="@string/file_system_file_info"
                android:summary="@string/file_system_file_info_summary"
                />

        <CheckBoxPreference
                android:key="force_en_lang"
                android:title="@string/force_use_en_locale"
                android:widgetLayout="@layout/check_box_preference"/>

        <PreferenceScreen
                android:key="style"
                android:title="@string/style"
                android:summary="@string/style_summary">

            <Preference
                    android:key="panel_font_size"
                    android:title="@string/main_panel_font_size"/>

            <Preference
                    android:key="toolbar_font_size"
                    android:title="@string/toolbar_font_size"/>

            <Preference
                    android:key="viewer_font_size"
                    android:title="@string/viewer_font_size"/>

            <Preference
                    android:key="panel_font"
                    android:title="@string/main_panel_font"/>

            <Preference
                    android:key="viewer_font"
                    android:title="@string/viewer_font"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="main_panel_color"
                    android:summary="@string/main_panel_color_summary"
                    android:title="@string/main_panel_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="secondary_color"
                    android:summary="@string/secondary_color_summary"
                    android:title="@string/secondary_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="viewer_color"
                    android:summary="@string/viewer_color_summary"
                    android:title="@string/viewer_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="text_color"
                    android:summary="@string/text_color_summary"
                    android:title="@string/text_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="folder_color"
                    android:summary="@string/folder_color_summary"
                    android:title="@string/folder_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="selected_color"
                    android:summary="@string/selected_color_summary"
                    android:title="@string/selected_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="hidden_color"
                    android:summary="@string/hidden_color_summary"
                    android:title="@string/hidden_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="install_color"
                    android:summary="@string/install_color_summary"
                    android:title="@string/install_color"/>

            <afzkl.development.colorpickerview.preference.ColorPickerPreference
                    android:key="archive_color"
                    android:summary="@string/archive_color_summary"
                    android:title="@string/archive_color"/>

            <Preference
                    android:key="reset_to_defaults"
                    android:title="@string/reset_to_defaults"/>

        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/settings_feedback"
            android:key="pref_feedback">

        <Preference
                android:key="tips"
                android:title="@string/tips"/>

        <Preference
                android:key="feedback"
                android:title="@string/send_email"
                android:summary="@string/send_email_summary"/>

        <Preference
                android:key="rate"
                android:title="@string/rate_app"
                android:summary="@string/rate_app_summary"/>

    </PreferenceCategory>

</PreferenceScreen>