<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <LinearLayout android:layout_marginTop="10dp"
                  android:paddingTop="30dp"
                  android:paddingLeft="15dp"
                  android:background="@drawable/file_system_frame"
                  android:layout_width="fill_parent"
                  android:orientation="vertical"
                  android:layout_height="fill_parent">

        <TextView
                android:id="@+id/error"
                android:textColor="@color/error_red"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/folder_name"
                android:textColor="@color/cyan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/quick_view_contains"
                android:layout_marginTop="20dp"
                android:textColor="@color/cyan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/cyan"
                        android:text="@string/quick_view_folders"/>
                <TextView
                        android:id="@+id/quick_view_folders"
                        android:textColor="@color/yellow"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/cyan"
                        android:text="@string/quick_view_files"/>
                <TextView
                        android:id="@+id/quick_view_files"
                        android:textColor="@color/yellow"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/cyan"
                        android:text="@string/quick_view_size"/>
                <TextView
                        android:id="@+id/quick_view_size"
                        android:textColor="@color/yellow"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/current_path"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/quick_view"
            android:ellipsize="middle"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:padding="3dp"
            android:gravity="center"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"/>

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal|right"/>

</FrameLayout>