<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:src="@drawable/icon_main"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/tips_first_page"
                    style="@style/tips_font"
                    android:gravity="left|center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@drawable/settings"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/tips_settings_page"
                android:gravity="left|center_horizontal"
                style="@style/tips_font"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@drawable/archive"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/tips_archive_page"
                android:gravity="left|center_horizontal"
                style="@style/tips_font"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@drawable/cloud_big"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/tips_cloud_page"
                android:gravity="left|center_horizontal"
                style="@style/tips_font"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>